--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -348,4 +348,129 @@
         --fs-lg: 35px;
         --fw-xxl: 700;
     }
+
+    .grid-item-1 {
+        grid-row: 1/3;
+        grid-column: 1/2;
+    }
+
+    .grid-item-2 {
+        grid-row: 3/4;
+        grid-column: 1/2;
+    }
+
+    .grid-item-3 {
+        grid-row: 4/6;
+        grid-column: 1/2;
+    }
+
+    .grid-item-4 {
+        grid-row: 6/8;
+        grid-column: 1/2;
+    }
+
+    .grid-item-5 {
+        grid-row: 8/9;
+        grid-column: 1/2;
+    }
+
+    .grid-item-6 {
+        grid-row: 9/10;
+        grid-column: 1/2;
+    }
+
+    .grid-item-7 {
+        grid-row: 10/11;
+        grid-column: 1/2;
+    }
+
+    .grid-item-8 {
+        grid-row: 11/13;
+        grid-column: 1/2;
+    }
+
+    .grid-item-9 {
+        grid-row: 13/14;
+        grid-column: 1/2;
+    }
+
+    .grid-item-10 {
+        grid-row: 14/15;
+        grid-column: 1/2;
+    }
+
+    .grid-item-11 {
+        grid-row: 15/16;
+        grid-column: 1/2;
+    }
+
+    .grid-item-12 {
+        grid-row: 16/17;
+        grid-column: 1/2;
+    }
+
+    .grid-item-13 {
+        grid-row: 17/18;
+        grid-column: 1/2;
+    }
+
+    .grid-item-14 {
+        grid-row: 18/19;
+        grid-column: 1/2;
+    }
+
+    .grid-item-15 {
+        grid-row: 19/20;
+        grid-column: 1/2;
+    }
+
+    .grid-item-16 {
+        grid-row: 20/21;
+        grid-column: 1/2;
+    }
+
+    .grid-item-17 {
+        grid-row: 21/23;
+        grid-column: 1/2;
+    }
+
+    .grid-item-18 {
+        grid-row: 23/24;
+        grid-column: 1/2;
+    }
+
+    .grid-item-19 {
+        grid-row: 24/25;
+        grid-column: 1/2;
+    }
+
+    .grid-item-20 {
+        grid-row: 25/26;
+        grid-column: 1/2;
+    }
+
+    .grid-item-21 {
+        grid-row: 26/27;
+        grid-column: 1/2;
+    }
+
+    .grid-item-22 {
+        grid-row: 27/28;
+        grid-column: 1/2;
+    }
+
+    .grid-item-23 {
+        grid-row: 28/29;
+        grid-column: 1/2;
+    }
+
+    .grid-item-24 {
+        grid-row: 29/30;
+        grid-column: 1/2;
+    }
+
+    .grid-item-25 {
+        grid-row: 30/31;
+        grid-column: 1/2;
+    }
 }
